Added a iphone container

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,59 @@
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
 }
+
+#gradient {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(140deg, #2980b9, #e67e22);
+    background-size: 400% 400%;
+    -webkit-animation: Gradient 15s ease-in-out infinite;
+    -moz-animation: Gradient 15s ease-in-out infinite;
+    animation: Gradient 15s ease-in-out infinite;
+}
+
+/* Animation */
+@-webkit-keyframes Gradient {
+    0%   { background-position: 0% 50% }
+    50%  { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+@-moz-keyframes Gradient {
+    0%   { background-position: 0% 50% }
+    50%  { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+@keyframes Gradient {
+    0%   { background-position: 0% 50% }
+    50%  { background-position: 100% 50% }
+    100% { background-position: 0% 50% }
+}
+
+.scroll--simple {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.scroll--simple::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+.scroll--simple::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.1);
+}
+.scroll--simple::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.2);
+}
+.scroll--simple::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.4);
+}
+.scroll--simple::-webkit-scrollbar-thumb:active {
+    background: rgba(0, 0, 0, 0.9);
+}
